  permitted, so your path forward if you wish to continue using the
  same 9.11 index is to index additional vectors into the same field
  with either 4 or 7 bit quantization (or no quantization), and ensure
  all older (9.11 written) segments are rewritten either via
  `IndexWriter.forceMerge` or
  `IndexWriter.addIndexes(CodecReader...)`, or reindexing entirely.

Build
---------------------

* GITHUB#13695, GITHUB#13696: Fix Gradle build sometimes gives spurious "unreferenced license file" warnings.
  (Uwe Schindler)

Other
--------------------

* GITHUB#13720: Add float comparison based on unit of least precision and use it to stop test failures caused by float
  summation not being associative in IEEE 754. (Alex Herbert, Stefan Vodita)

======================== Lucene 9.11.1 =======================

Bug Fixes
---------------------

* GITHUB#13498: Avoid performance regression by constructing lazily the PointTree in NumericComparator. (Ignacio Vera)

* GITHUB#13501, GITHUB#13478: Remove intra-merge parallelism for everything except HNSW graph merges. (Ben Trent)

* GITHUB#13498, GITHUB#13340: Allow adding a parent field to an index with no fields (Michael Sokolov)

* GITHUB#12431: Fix IndexOutOfBoundsException thrown in DefaultPassageFormatter
  by unordered matches. (Stephane Campinas)

* GITHUB#13493: StringValueFacetCounts stops throwing NPE when faceting over an empty match-set. (Grebennikov Roman,
  Stefan Vodita)


======================== Lucene 9.11.0 =======================

API Changes
---------------------

* GITHUB#13145: Deprecate ByteBufferIndexInput as it will be removed in Lucene 10.0. (Uwe Schindler)

* GITHUB#13422: an explicit dependency on the HPPC library is removed in favor of an internal repackaged copy in
  oal.internal.hppc. If you relied on HPPC as a transitive dependency, you'll have to add it to your project explicitly.